{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 64,
  "lineage": "6fc76c9c-3328-0c6a-d41e-0d76867c85c6",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "managed_node",
      "provider": "module.compute.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cf43e890af9e3351",
            "arn": "arn:aws:ec2:us-east-1:891376955330:instance/i-04d0fc5a7d57635ab",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04d0fc5a7d57635ab",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-078dcaa2e984f7dcf",
            "private_dns": "ip-10-0-1-214.ec2.internal",
            "private_ip": "10.0.1.214",
            "public_dns": "ec2-44-202-118-144.compute-1.amazonaws.com",
            "public_ip": "44.202.118.144",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00683b577885094a3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01bc34b866414aa4a",
            "tags": {
              "Name": "host_node_0"
            },
            "tags_all": {
              "Name": "host_node_0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d34b6b069f58f1bb"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "module.compute.aws_key_pair.aws-key",
            "module.compute.data.aws_ssm_parameter.webserver-ami",
            "module.vpc.aws_security_group.ansible_public_sg",
            "module.vpc.aws_subnet.ansible_public_subnet",
            "module.vpc.aws_vpc.ansible_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cf43e890af9e3351",
            "arn": "arn:aws:ec2:us-east-1:891376955330:instance/i-084c6d0970cefaece",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-084c6d0970cefaece",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05f7e9e134df5ce83",
            "private_dns": "ip-10-0-1-40.ec2.internal",
            "private_ip": "10.0.1.40",
            "public_dns": "ec2-44-203-40-213.compute-1.amazonaws.com",
            "public_ip": "44.203.40.213",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b4427920ba54117c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01bc34b866414aa4a",
            "tags": {
              "Name": "host_node_1"
            },
            "tags_all": {
              "Name": "host_node_1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d34b6b069f58f1bb"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "module.compute.aws_key_pair.aws-key",
            "module.compute.data.aws_ssm_parameter.webserver-ami",
            "module.vpc.aws_security_group.ansible_public_sg",
            "module.vpc.aws_subnet.ansible_public_subnet",
            "module.vpc.aws_vpc.ansible_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cf43e890af9e3351",
            "arn": "arn:aws:ec2:us-east-1:891376955330:instance/i-00a7ced2344b3f416",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00a7ced2344b3f416",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0311285488476bde2",
            "private_dns": "ip-10-0-1-102.ec2.internal",
            "private_ip": "10.0.1.102",
            "public_dns": "ec2-35-173-133-111.compute-1.amazonaws.com",
            "public_ip": "35.173.133.111",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05f30ff0139ccacb7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01bc34b866414aa4a",
            "tags": {
              "Name": "host_node_2"
            },
            "tags_all": {
              "Name": "host_node_2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d34b6b069f58f1bb"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "module.compute.aws_key_pair.aws-key",
            "module.compute.data.aws_ssm_parameter.webserver-ami",
            "module.vpc.aws_security_group.ansible_public_sg",
            "module.vpc.aws_subnet.ansible_public_subnet",
            "module.vpc.aws_vpc.ansible_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cf43e890af9e3351",
            "arn": "arn:aws:ec2:us-east-1:891376955330:instance/i-0520988cd5f40b200",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0520988cd5f40b200",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07722a58c7f4dc9bb",
            "private_dns": "ip-10-0-1-139.ec2.internal",
            "private_ip": "10.0.1.139",
            "public_dns": "ec2-3-87-1-197.compute-1.amazonaws.com",
            "public_ip": "3.87.1.197",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e58d9950b5d6b402",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01bc34b866414aa4a",
            "tags": {
              "Name": "host_node_3"
            },
            "tags_all": {
              "Name": "host_node_3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d34b6b069f58f1bb"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "module.compute.aws_key_pair.aws-key",
            "module.compute.data.aws_ssm_parameter.webserver-ami",
            "module.vpc.aws_security_group.ansible_public_sg",
            "module.vpc.aws_subnet.ansible_public_subnet",
            "module.vpc.aws_vpc.ansible_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ansible_igw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376955330:internet-gateway/igw-01ab527426e19ce72",
            "id": "igw-01ab527426e19ce72",
            "owner_id": "891376955330",
            "tags": {
              "Name": "Ansible-Sandbox-Gateway"
            },
            "tags_all": {
              "Name": "Ansible-Sandbox-Gateway"
            },
            "vpc_id": "vpc-0bf265584cea4dc83"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ansible_public_route",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376955330:route-table/rtb-051c5fa22f577555e",
            "id": "rtb-051c5fa22f577555e",
            "owner_id": "891376955330",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01ab527426e19ce72",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Ansible-Sandbox-RouteTable"
            },
            "tags_all": {
              "Name": "Ansible-Sandbox-RouteTable"
            },
            "vpc_id": "vpc-0bf265584cea4dc83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.ansible_igw",
            "module.vpc.aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ansible_public_assoc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075a440b59a95e0b6",
            "route_table_id": "rtb-051c5fa22f577555e",
            "subnet_id": "subnet-01bc34b866414aa4a"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.ansible_igw",
            "module.vpc.aws_route_table.ansible_public_route",
            "module.vpc.aws_subnet.ansible_public_subnet",
            "module.vpc.aws_vpc.ansible_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ansible_public_sg",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376955330:security-group/sg-0d34b6b069f58f1bb",
            "description": "Used for access to the public instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d34b6b069f58f1bb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic from TCP/1233",
                "from_port": 1233,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1233
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic from TCP/80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic from TCP/8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "ansible_public_sg",
            "name_prefix": "",
            "owner_id": "891376955330",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Ansible-SecurityGroup"
            },
            "tags_all": {
              "Name": "Ansible-SecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf265584cea4dc83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ansible_public_subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376955330:subnet/subnet-01bc34b866414aa4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-01bc34b866414aa4a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891376955330",
            "tags": {
              "Name": "Ansible-Sandbox-Subnet"
            },
            "tags_all": {
              "Name": "Ansible-Sandbox-Subnet"
            },
            "vpc_id": "vpc-0bf265584cea4dc83"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ansible_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ansible_vpc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376955330:vpc/vpc-0bf265584cea4dc83",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0682ea81ba3d3873c",
            "default_route_table_id": "rtb-0b378bada362166a3",
            "default_security_group_id": "sg-0f82b8c57ff9793d1",
            "dhcp_options_id": "dopt-0c82dcbdc56a4a500",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0bf265584cea4dc83",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b378bada362166a3",
            "owner_id": "891376955330",
            "tags": {
              "Name": "Terraform-VPC"
            },
            "tags_all": {
              "Name": "Terraform-VPC"
            }
          }
        }
      ]
    }
  ]
}